Update specific services links in footer, make it general services

--- a/components/footer.html
+++ b/components/footer.html
@@ -40,10 +40,10 @@
         <div>
             <h4 class="text-lg font-bold mb-6">Услуги</h4>
             <ul class="space-y-3">
-                <li><a href="/services/sudebnoe-predstavitelstvo" class="text-gray-300 hover:text-white transition">Судебное представительство</a></li>
-                <li><a href="/services/sdelki-s-nedvizhimostyu" class="text-gray-300 hover:text-white transition">Сделки с недвижимостью</a></li>
-                <li><a href="/services/ugolovnaya-zashchita" class="text-gray-300 hover:text-white transition">Защита по уголовным делам</a></li>
-                <li><a href="/services/ipotechnoe-soprovozhdenie" class="text-gray-300 hover:text-white transition">Ипотечное сопровождение</a></li>
+                <li><a href="/services/" class="text-gray-300 hover:text-white transition">Судебное представительство</a></li>
+                <li><a href="/services/" class="text-gray-300 hover:text-white transition">Сделки с недвижимостью</a></li>
+                <li><a href="/services/" class="text-gray-300 hover:text-white transition">Защита по уголовным делам</a></li>
+                <li><a href="/services/" class="text-gray-300 hover:text-white transition">Ипотечное сопровождение</a></li>
             </ul>
         </div>
         
